changed link targets to self

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,25 +41,25 @@
         <main>
           <section class="row">
             <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/17_27_10.jpg" target="blank"><img src="../Portfolio/assets/imgs/17_27_10.jpg" class="img-fluid"  alt="Concert Lighting pre-viz1"></a>
+              <a href="../Portfolio/assets/imgs/17_27_10.jpg" target="_self"><img src="../Portfolio/assets/imgs/17_27_10.jpg" class="img-fluid"  alt="Concert Lighting pre-viz1"></a>
             </div>
             <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/16_28_40.jpg" target="blank"><img src="../Portfolio/assets/imgs/16_28_40.jpg" class="img-fluid" alt="Concert Lighting pre-viz2"></a>
+              <a href="../Portfolio/assets/imgs/16_28_40.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_28_40.jpg" class="img-fluid" alt="Concert Lighting pre-viz2"></a>
             </div>
             <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/16_10_45.jpg" target="blank"><img src="../Portfolio/assets/imgs/16_10_45.jpg" class="img-fluid" alt="Concert Lighting pre-viz3"></a>
+              <a href="../Portfolio/assets/imgs/16_10_45.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_10_45.jpg" class="img-fluid" alt="Concert Lighting pre-viz3"></a>
             </div>
           </section>
           <br>
           <section class="row">
             <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/16_08_41.jpg" target="blank"><img src="../Portfolio/assets/imgs/16_08_41.jpg" class="img-fluid" alt="Concert Lighting pre-viz4"></a>
+              <a href="../Portfolio/assets/imgs/16_08_41.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_08_41.jpg" class="img-fluid" alt="Concert Lighting pre-viz4"></a>
             </div>
             <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/16_08_16.jpg" target="blank"><img src="../Portfolio/assets/imgs/16_08_16.jpg" class="img-fluid" alt="Concert Lighting pre-viz5"></a>
+              <a href="../Portfolio/assets/imgs/16_08_16.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_08_16.jpg" class="img-fluid" alt="Concert Lighting pre-viz5"></a>
             </div>
             <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/16_08_52.jpg" target="blank"><img src="../Portfolio/assets/imgs/16_08_52.jpg" class="img-fluid" alt="Concert Lighting pre-viz6"></a>
+              <a href="../Portfolio/assets/imgs/16_08_52.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_08_52.jpg" class="img-fluid" alt="Concert Lighting pre-viz6"></a>
             </div>
           </section>
           <br>
