added footer to all pages

--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
         </div>
       </div>  
     </main>
+    <sticky-footer>
+      <h3>hello</h3>
+    </sticky-footer>
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
