updated footer across all pages

--- a/index.html
+++ b/index.html
@@ -215,13 +215,14 @@
                       </div>
                     </div>
                 </div>
+                <br>
               </div>
             </div>
         </div>
       </div>  
     </main>
     <sticky-footer>
-      <h3>hello</h3>
+      <h5>Website created by: Michael A. Willingham</h5>
     </sticky-footer>
     
     <!-- Optional JavaScript -->
