--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
       </div>
     </main>
     <sticky-footer>
-      <h2>hello</h2>
+      <h5>Website created by: Michael A. Willingham</h5>
     </sticky-footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
