--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
     </form>
   </div>
   <sticky-footer>
-    <h2>hello</h2>
+    <h5>Website created by: Michael A. Willingham</h5>
   </sticky-footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
