updated text in about me,design,and live

--- a/index.html
+++ b/index.html
@@ -38,16 +38,12 @@
                 <h1 class="row">Michael A. Willingham</h1>
                 <!-- rowbgc class -->
                 <div class="row rowbgc">
-                    <div class="media">
-                        <img src="../Portfolio/assets/imgs/Bio pic 200x200.jpg" class="align-self-start mr-3" alt="...">
+                    <div>
+                        <img src="../Portfolio/assets/imgs/Bio pic 200x200.jpg" class="align-self-start mr-3 floated" alt="...">
                         <div class="media-body">
                           <h5 class="mt-0">About Me</h5>
                           <p>
-                              I have worked in the live entertainment production industry for the past 12 years.
-                              I started out as a stage hand and worked my way up to production manger at several venues.
-                              although I have enjoyed being a prouction mager my main passion has always been lighting.
-                              for the past 11 years i have held the position of lighting director at a local large venue,
-                              and for the past 6 years have held both the PM and LD positions. 
+                            I have worked in the live entertainment production industry for the past 12 years.I started out as a stage hand and have worked my way up through many positions such as audio engineer, monitor engineer, video tech, lighting director/programmer, stage manager, and production manger. Due to current events I have had to start looking at other possible fields of work. Computer technology is a very important aspect in live production everything from networking and file systems to basic coding are very common place in the industry. To that end I have started taking this web development class to expand my knowledge.
                           </p>
                         </div>
                     </div>   
@@ -109,8 +105,12 @@
                         <img src="../Portfolio/assets/imgs/design 200.jpg" class="align-self-center mr-3" alt="...">
                         <div class="media-body">
                           <h5 class="mt-0">Design</h5>
-                          <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                          <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                          <p>
+                            Lets work together on some lighting/show design feel free to drop a message at the bottom of this page with your contact info if you want to collaborate!
+                          </p>
+                          <p class="mb-0">
+                            I use Light converse primarily for pre-viz but I do have experience with other software as well.
+                          </p>
                         </div>
                       </div>
                 </div>
@@ -121,8 +121,12 @@
                         <img src="../Portfolio/assets/imgs/indoor show 200x200.jpg" class="align-self-center mr-3" alt="...">
                         <div class="media-body">
                           <h5 class="mt-0">Live</h5>
-                          <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                          <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                          <p>
+                            Lets work together sometime. If you need an experienced crew member or manager hit me up!
+                          </p>
+                          <p class="mb-0">
+                            Lets remember all the good time we had doing live shows, and all the people we meet along the way may they all be safe.
+                          </p>
                         </div>
                       </div>
                 </div>
