added alt tags to all imgs in index

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <!-- rowbgc class -->
                 <div class="row rowbgc">
                     <div>
-                        <img src="../Portfolio/assets/imgs/Bio pic 200x200.jpg" class="align-self-start mr-3 floated" alt="...">
+                        <img src="../Portfolio/assets/imgs/Bio pic 200x200.jpg" class="align-self-start mr-3 floated" alt="black and white picture of me">
                         <div class="media-body">
                           <h5 class="mt-0">About Me</h5>
                           <p>
@@ -77,7 +77,7 @@
                  <br>
                  <div class="row rowbgc">
                   <div class="media">
-                      <img src="../Portfolio/assets/imgs/social logos.png" class="align-self-center mr-3" alt="...">
+                      <img src="../Portfolio/assets/imgs/social logos.png" class="align-self-center mr-3" alt="social media logos">
                       <div class="media-body">
                         <h5 class="mt-0">My Links</h5>
                         <ul class="nav flex-column">
@@ -102,7 +102,7 @@
                  <!-- rowbgc class -->
                 <div class="row rowbgc">
                     <div class="media">
-                        <img src="../Portfolio/assets/imgs/design 200.jpg" class="align-self-center mr-3" alt="...">
+                        <img src="../Portfolio/assets/imgs/design 200.jpg" class="align-self-center mr-3" alt="Picture of rendered concert lighting">
                         <div class="media-body">
                           <h5 class="mt-0">Design</h5>
                           <p>
@@ -118,7 +118,7 @@
                 <!-- rowbgc class -->
                 <div class="row rowbgc">
                     <div class="media">
-                        <img src="../Portfolio/assets/imgs/indoor show 200x200.jpg" class="align-self-center mr-3" alt="...">
+                        <img src="../Portfolio/assets/imgs/indoor show 200x200.jpg" class="align-self-center mr-3" alt="Picture of live concert lighting">
                         <div class="media-body">
                           <h5 class="mt-0">Live</h5>
                           <p>
@@ -178,7 +178,7 @@
                 <div class="row">
                     <div class="col mb-4">
                       <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="placeholder img">
                         <!-- rowbgc class -->
                         <div class="card-body rowbgc">
                           <h5 class="card-title">Project 1</h5>
@@ -188,7 +188,7 @@
                     </div>
                     <div class="col mb-4">
                       <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="placeholder img">
                         <!-- rowbgc class -->
                         <div class="card-body rowbgc">
                           <h5 class="card-title">Project 2</h5>
@@ -200,7 +200,7 @@
                 <div class="row">
                     <div class="col mb-4">
                       <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="placeholder img">
                         <!-- rowbgc class -->
                         <div class="card-body rowbgc">
                           <h5 class="card-title">Project 3</h5>
