--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,9 @@
       </div>
   </nav>
   <header>
-  <h1 id="contactHeader">Contact</h1>
+  <h1 id="contactHeader">Contact Me</h1>
   </header>
-  <div class="container">
+  <div class="container-sm">
     <form id="contact">
       <div class="input-group mb-3">
           <div class="input-group-prepend">
