added @media screen and (max-width: 420px) to css and added contact class to it for better small screen support

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
   <header>
   <h1 id="contactHeader">Contact Me</h1>
   </header>
-  <div class="container-sm">
+  <div class="container-md">
     <form id="contact">
       <div class="input-group mb-3">
           <div class="input-group-prepend">
