--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         </div>
     </nav>
     <main>
-      <div class="container-fluid">
-        <div class="row">
+      <div class="container-md">
+        <!-- top row with 3 columns -->
+        <section class="row">
             <div class="col-md-6">
                 <h1 class="row">Michael A. Willingham</h1>
                 <!-- rowbgc class -->
@@ -64,18 +65,20 @@
                     </div>
                     <!-- rowbgc class -->
                     <div class="card-footer text-muted rowbgc">
-                      <!-- 2 days ago -->
+                      <!-- ... -->
                     </div>
                 </div>
                 <br>
             </div>
-        </div>
+        </section>
+        <!-- bottom main row -->
         <div class="row">
+            <!-- left column with sub rows -->
             <div class="col-md-6">
                  <!-- other links and pic titles -->
                  <!-- rowbgc class -->
-                 <br>
-                 <div class="row rowbgc">
+                <br>
+                <div class="row rowbgc">
                   <div class="media">
                       <img src="../Portfolio/assets/imgs/social logos.png" class="align-self-center mr-3" alt="social media logos">
                       <div class="media-body">
@@ -95,8 +98,8 @@
                           </li>
                         </ul>
                       </div>
-                    </div>
-              </div>
+                </div>
+            </div>
               <br>
                  <!-- other links and pic titles -->
                  <!-- rowbgc class -->
