added project 1 pics to assets and linked in portfolio. updated portfolio page with new pics and added rows for web dev and lighting pic headers. updated styling for contact page

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,47 +37,50 @@
       <div class="container-fluid">
         <!-- page head -->
         <div class="row"><h1>Portfolio</h1></div>
+        <!-- web dev section head -->
+        <header class="row"><h3>Web Dev</h3></header>
         <!-- main portfolio pics -->
         <main>
+          <!-- web dev portfolio pics -->
           <section class="row">
             <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/17_27_10.jpg" target="_self"><img src="../Portfolio/assets/imgs/17_27_10.jpg" class="img-fluid"  alt="Concert Lighting pre-viz1"></a>
+              <a href="../Portfolio/assets/imgs/Portfolio code 1.JPG" target="_self"><img src="../Portfolio/assets/imgs/Portfolio code 1.JPG" class="img-fluid"  alt="html code"></a>
             </div>
             <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/16_28_40.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_28_40.jpg" class="img-fluid" alt="Concert Lighting pre-viz2"></a>
+              <a href="../Portfolio/assets/imgs/Portfolio code 2.JPG" target="_self"><img src="../Portfolio/assets/imgs/Portfolio code 2.JPG" class="img-fluid" alt="html code"></a>
             </div>
             <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/16_10_45.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_10_45.jpg" class="img-fluid" alt="Concert Lighting pre-viz3"></a>
+              <a href="../Portfolio/assets/imgs/portfolio website 1.JPG" target="_self"><img src="../Portfolio/assets/imgs/portfolio website 1.JPG" class="img-fluid" alt="Website screenshots"></a>
+            </div>
+            <div class="col-md-4">
+              <a href="../Portfolio/assets/imgs/portfolio website 2.JPG" target="_self"><img src="../Portfolio/assets/imgs/portfolio website 2.JPG" class="img-fluid" alt="Website screenshots"></a>
+            </div>
+            <div class="col-md-4">
+              <a href="../Portfolio/assets/imgs/16_10_45.jpg" target="_self"><img src="https://via.placeholder.com/600x320" class="img-fluid" alt="placeholder"></a>
+            </div>
+            <div class="col-md-4">
+              <a href="../Portfolio/assets/imgs/16_10_45.jpg" target="_self"><img src="https://via.placeholder.com/600x320" class="img-fluid" alt="placeholder"></a>
             </div>
           </section>
           <br>
+          <header class="row"><h3>Lighting design</h3></header>
+          <!-- lighting portfolio -->
           <section class="row">
             <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/16_08_41.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_08_41.jpg" class="img-fluid" alt="Concert Lighting pre-viz4"></a>
+              <a href="../Portfolio/assets/imgs/16_10_45.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_10_45.jpg" class="img-fluid" alt="Concert Lighting pre-viz1"></a>
             </div>
             <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/16_08_16.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_08_16.jpg" class="img-fluid" alt="Concert Lighting pre-viz5"></a>
+              <a href="../Portfolio/assets/imgs/16_08_16.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_08_16.jpg" class="img-fluid" alt="Concert Lighting pre-viz2"></a>
             </div>
             <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/16_08_52.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_08_52.jpg" class="img-fluid" alt="Concert Lighting pre-viz6"></a>
+              <a href="../Portfolio/assets/imgs/16_08_52.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_08_52.jpg" class="img-fluid" alt="Concert Lighting pre-viz3"></a>
             </div>
           </section>
           <br>
-          <!-- extra row and cols for future use  -->
-          <!-- <section class="row">
-            <div class="col-md-4">
-              gggg
-            </div>
-            <div class="col-md-4">
-              ggg
-            </div>
-            <div class="col-md-4">
-              ggg
-            </div>
-          </section> -->
         </main>
       </div>
     </main>
+    <br>
     <sticky-footer>
       <h5>Website created by: Michael A. Willingham</h5>
     </sticky-footer>
