updated index to include web dev requirements. updated Readme.md with info about the project and links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../Portfolio/assets/imgs/css/reset.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- css style -->
     <link rel="stylesheet" href="../Portfolio/assets/imgs/css/style.css">
     <title>About Me</title>
   </head>
@@ -33,14 +34,15 @@
     </nav>
     <main>
       <div class="container-md">
-        <!-- top row with 3 columns -->
+        <!-- top row with 2 columns for about me and quote -->
         <section class="row">
             <div class="col-md-6">
                 <h1 class="row">Michael A. Willingham</h1>
                 <!-- rowbgc class -->
                 <div class="row rowbgc">
                     <div>
-                        <img src="../Portfolio/assets/imgs/Bio pic 200x200.jpg" class="align-self-start mr-3 floated" alt="black and white picture of me">
+                      <!-- about me  -->
+                      <img src="../Portfolio/assets/imgs/Bio pic 200x200.jpg" class="align-self-start mr-3 floated" alt="black and white picture of me">
                         <div class="media-body">
                           <h5 class="mt-0">About Me</h5>
                           <p>
@@ -51,6 +53,7 @@
                 </div>
                 <br>
             </div>
+            <!-- quotes -->
             <div class="col-md-6">
                 <div class="card text-center">
                     <div class="card-header rowbgc">
@@ -101,15 +104,15 @@
                 </div>
             </div>
               <br>
-                 <!-- other links and pic titles -->
+                 <!-- design section -->
                  <!-- rowbgc class -->
                 <div class="row rowbgc">
                     <div class="media">
-                        <img src="../Portfolio/assets/imgs/design 200.jpg" class="align-self-center mr-3" alt="Picture of rendered concert lighting">
+                        <img src="../Portfolio/assets/imgs/Portfolio code 1 250px.png" class="align-self-center mr-3" alt="Picture of HTML code">
                         <div class="media-body">
                           <h5 class="mt-0">Design</h5>
                           <p>
-                            Lets work together on some lighting/show design feel free to drop a message at the bottom of this page with your contact info if you want to collaborate!
+                            Lets work together on some lighting or web design... feel free to drop a message at the bottom of this page with your contact info if you want to collaborate!
                           </p>
                           <p class="mb-0">
                             I use Light converse primarily for pre-viz but I do have experience with other software as well.
@@ -118,6 +121,7 @@
                       </div>
                 </div>
                 <br>
+                <!-- live shows section -->
                 <!-- rowbgc class -->
                 <div class="row rowbgc">
                     <div class="media">
@@ -135,6 +139,7 @@
                 </div>
                 <br>
                 <div class="row">
+                  <!-- quick contact section -->
                   <contact>
                     <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
                       <!-- rowbgc class -->  
@@ -178,6 +183,7 @@
                   <p class="lead">Check out <a href="../Portfolio/portfolio.html" >Portfolio</a> for full datails</p>
                 </div>
               </div>
+              <!-- cards for new projects -->
                 <div class="row">
                     <div class="col mb-4">
                       <div class="card h-100">
@@ -229,6 +235,7 @@
       </div>  
     </main>
     <br>
+    <!-- footer needs work -->
     <sticky-footer>
       <h5>Website created by: Michael A. Willingham</h5>
     </sticky-footer>
