--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- css reset -->
+    <link rel="stylesheet" href="../Portfolio/assets/imgs/css/reset.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- css style -->
     <link rel="stylesheet" href="../Portfolio/assets/imgs/css/style.css">
     <title>Portfolio</title>
   </head>
@@ -64,7 +67,7 @@
           </section>
           <br>
           <header class="row"><h3>Lighting design</h3></header>
-          <!-- lighting portfolio -->
+          <!-- lighting portfolio pics-->
           <section class="row">
             <div class="col-md-4">
               <a href="../Portfolio/assets/imgs/16_10_45.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_10_45.jpg" class="img-fluid" alt="Concert Lighting pre-viz1"></a>
