updated alt tag on first lighting pic

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
           <!-- lighting portfolio pics-->
           <section class="row">
             <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/16_10_45.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_10_45.jpg" class="img-fluid" alt="Concert Lighting pre-viz1"></a>
+              <a href="../Portfolio/assets/imgs/16_10_45.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_10_45.jpg" class="img-fluid" alt="Concert Lighting pre-viz1 paper"></a>
             </div>
             <div class="col-md-4">
               <a href="../Portfolio/assets/imgs/16_08_16.jpg" target="_self"><img src="../Portfolio/assets/imgs/16_08_16.jpg" class="img-fluid" alt="Concert Lighting pre-viz2"></a>
