adding script folder and imgs for projects also updating css removed code pics from portfolio

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- css reset -->
-    <link rel="stylesheet" href="../Portfolio/assets/imgs/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- css style -->
-    <link rel="stylesheet" href="../Portfolio/assets/imgs/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>About Me</title>
   </head>
   <body>
@@ -180,28 +180,28 @@
               <div class="jumbotron jumbotron-fluid rowbgc">
                 <div class="container">
                   <h1 class="display-4">Current Projects!</h1>
-                  <p class="lead">Check out <a href="../Portfolio/portfolio.html" >Portfolio</a> for full datails</p>
+                  <p class="lead">Check out <a href="../Portfolio/portfolio.html" >Portfolio</a> for full list</p>
                 </div>
               </div>
               <!-- cards for new projects -->
                 <div class="row">
                     <div class="col mb-4">
                       <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="placeholder img">
+                        <img src="./assets/imgs/Pw_gene_Demo.JPG" class="card-img-top" alt="placeholder img">
                         <!-- rowbgc class -->
                         <div class="card-body rowbgc">
-                          <h5 class="card-title">Project 1</h5>
-                          <p class="card-text">Project info</p>
+                          <h5 class="card-title"><a href="https://malex19889.github.io/Password-Generator/" >Password Generator</a></h5>
+                          <p class="card-text">Project info: A simple password generator that allows the user to slect a length and what type of characters they want included in their password</p>
                         </div>
                       </div>
                     </div>
                     <div class="col mb-4">
                       <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="placeholder img">
+                        <img src="./assets/imgs/Code_Quiz_Demo.JPG" class="card-img-top" alt="placeholder img">
                         <!-- rowbgc class -->
                         <div class="card-body rowbgc">
-                          <h5 class="card-title">Project 2</h5>
-                          <p class="card-text">Project info</p>
+                          <h5 class="card-title"><a href="https://malex19889.github.io/Js_Code_Quiz/" >JS Code Quiz</a></h5>
+                          <p class="card-text">Project info: A simple 10 question quiz game</p>
                         </div>
                       </div>
                     </div>
@@ -209,21 +209,21 @@
                 <div class="row">
                     <div class="col mb-4">
                       <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="placeholder img">
+                        <img src="./assets/imgs/Weather_Dash_Demo.JPG" class="card-img-top" alt="placeholder img">
                         <!-- rowbgc class -->
                         <div class="card-body rowbgc">
-                          <h5 class="card-title">Project 3</h5>
-                          <p class="card-text">Project info</p>
+                          <h5 class="card-title"><a href="https://malex19889.github.io/Weather-Dashboard/" >Weather-Dashboard</a></h5>
+                          <p class="card-text">Project info: this app lets the user search for any city and get the current weather and a 5 day forecast fo that city, and also saves the users search history.</p>
                         </div>
                       </div>
                     </div>
                     <div class="col mb-4">
                       <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                        <img src="./assets/imgs/Whos_Open1.JPG" class="card-img-top" alt="...">
                         <!-- rowbgc class -->
                         <div class="card-body rowbgc">
-                          <h5 class="card-title">Project 4</h5>
-                          <p class="card-text">Project info</p>
+                          <h5 class="card-title"><a href="https://malex19889.github.io/Who-s-Open/" >Whos's Open?</a></h5>
+                          <p class="card-text">Project info: This app lets a user select a location type search and a radius then shows what locations are currently open.</p>
                         </div>
                       </div>
                     </div>
