--- a/portfolio.html
+++ b/portfolio.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- css reset -->
-    <link rel="stylesheet" href="../Portfolio/assets/imgs/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- css style -->
-    <link rel="stylesheet" href="../Portfolio/assets/imgs/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Portfolio</title>
   </head>
   <body>
@@ -47,23 +47,33 @@
           <!-- web dev portfolio pics -->
           <section class="row">
             <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/Portfolio code 1.JPG" target="_self"><img src="../Portfolio/assets/imgs/Portfolio code 1.JPG" class="img-fluid"  alt="html code"></a>
-            </div>
-            <div class="col-md-4">
-              <a href="../Portfolio/assets/imgs/Portfolio code 2.JPG" target="_self"><img src="../Portfolio/assets/imgs/Portfolio code 2.JPG" class="img-fluid" alt="html code"></a>
-            </div>
-            <div class="col-md-4">
               <a href="../Portfolio/assets/imgs/portfolio website 1.JPG" target="_self"><img src="../Portfolio/assets/imgs/portfolio website 1.JPG" class="img-fluid" alt="Website screenshots"></a>
             </div>
             <div class="col-md-4">
               <a href="../Portfolio/assets/imgs/portfolio website 2.JPG" target="_self"><img src="../Portfolio/assets/imgs/portfolio website 2.JPG" class="img-fluid" alt="Website screenshots"></a>
             </div>
             <div class="col-md-4">
+              <a href="https://malex19889.github.io/Password-Generator/" target="_self"><img src="./assets/imgs/Pw_gene_Demo.JPG" class="img-fluid" alt="Website screenshots"></a>
+            </div>
+            <div class="col-md-4">
+              <a href=" https://malex19889.github.io/Js_Code_Quiz/" target="_self"><img src="./assets/imgs/Code_Quiz_Demo.JPG" class="img-fluid" alt="Website screenshots"></a>
+            </div>
+            <div class="col-md-4">
+              <a href=" https://malex19889.github.io/Weather-Dashboard/" target="_self"><img src="./assets/imgs/Weather_Dash_Demo.JPG" class="img-fluid" alt="placeholder"></a>
+            </div>
+            <div class="col-md-4">
+              <a href="https://malex19889.github.io/Who-s-Open/" target="_self"><img src="./assets/imgs/Whos_Open1.JPG" class="img-fluid" alt="placeholder"></a>
+            </div>
+            <div class="col-md-4">
+              <a href="https://malex19889.github.io/Who-s-Open/" target="_self"><img src="./assets/imgs/Whos_Open2.JPG" class="img-fluid" alt="placeholder"></a>
+            </div>
+            <!-- for future project pics -->
+            <!-- <div class="col-md-4">
               <a href="../Portfolio/assets/imgs/16_10_45.jpg" target="_self"><img src="https://via.placeholder.com/600x320" class="img-fluid" alt="placeholder"></a>
             </div>
             <div class="col-md-4">
               <a href="../Portfolio/assets/imgs/16_10_45.jpg" target="_self"><img src="https://via.placeholder.com/600x320" class="img-fluid" alt="placeholder"></a>
-            </div>
+            </div> -->
           </section>
           <br>
           <header class="row"><h3>Lighting design</h3></header>
