--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- css reset -->
-    <link rel="stylesheet" href="../Portfolio/assets/imgs/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- css style -->
-    <link rel="stylesheet" href="../Portfolio/assets/imgs/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Contact</title>
   </head>
   <body>
