updated links on portfolio and changed link styling with added hover for portfolio links

--- a/index.html
+++ b/index.html
@@ -88,16 +88,19 @@
                         <h5 class="mt-0">My Links</h5>
                         <ul class="nav flex-column">
                           <li class="nav-item">
-                            <a class="nav-link active" href="https://www.facebook.com/mwillingham" target="blank">Facebook</a>
+                            <a class="nav-link active" href="https://www.facebook.com/mwillingham" target="blank"><h5>Facebook</h5></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" href="https://www.instagram.com/alexlights/" target="blank">Instagram</a>
+                            <a class="nav-link active" href="https://www.instagram.com/alexlights/" target="blank"><h5>Instagram</h5></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" href="https://www.linkedin.com/in/michael-willingham-934a6295/" target="blank">LinkedIn</a>
+                            <a class="nav-link active" href="https://www.linkedin.com/in/michael-willingham-934a6295/" target="blank"><h5>LinkedIn</h5></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" href="https://malex19889.github.io/" target="blank">Github</a>
+                            <a class="nav-link active" href="https://github.com/malex19889" target="blank"><h5>Github</h5></a>
+                          </li>
+                          <li class="nav-item">
+                           <h5>Email: malex19889@yahoo.com</h5>
                           </li>
                         </ul>
                       </div>
@@ -180,7 +183,7 @@
               <div class="jumbotron jumbotron-fluid rowbgc">
                 <div class="container">
                   <h1 class="display-4">Current Projects!</h1>
-                  <p class="lead">Check out <a href="../Portfolio/portfolio.html" >Portfolio</a> for full list</p>
+                  <p class="lead">Check out <a class="portLink" href="../Portfolio/portfolio.html" >Portfolio</a> for full list</p>
                 </div>
               </div>
               <!-- cards for new projects -->
@@ -190,7 +193,7 @@
                         <img src="./assets/imgs/Pw_gene_Demo.JPG" class="card-img-top" alt="placeholder img">
                         <!-- rowbgc class -->
                         <div class="card-body rowbgc">
-                          <h5 class="card-title"><a href="https://malex19889.github.io/Password-Generator/" >Password Generator</a></h5>
+                          <h5 class="card-title"><a class="portLink" href="https://malex19889.github.io/Password-Generator/" >Password Generator</a></h5>
                           <p class="card-text">Project info: A simple password generator that allows the user to slect a length and what type of characters they want included in their password</p>
                         </div>
                       </div>
@@ -200,7 +203,7 @@
                         <img src="./assets/imgs/Code_Quiz_Demo.JPG" class="card-img-top" alt="placeholder img">
                         <!-- rowbgc class -->
                         <div class="card-body rowbgc">
-                          <h5 class="card-title"><a href="https://malex19889.github.io/Js_Code_Quiz/" >JS Code Quiz</a></h5>
+                          <h5 class="card-title"><a class="portLink" href="https://malex19889.github.io/Js_Code_Quiz/" >JS Code Quiz</a></h5>
                           <p class="card-text">Project info: A simple 10 question quiz game</p>
                         </div>
                       </div>
@@ -212,7 +215,7 @@
                         <img src="./assets/imgs/Weather_Dash_Demo.JPG" class="card-img-top" alt="placeholder img">
                         <!-- rowbgc class -->
                         <div class="card-body rowbgc">
-                          <h5 class="card-title"><a href="https://malex19889.github.io/Weather-Dashboard/" >Weather-Dashboard</a></h5>
+                          <h5 class="card-title"><a class="portLink" href="https://malex19889.github.io/Weather-Dashboard/" >Weather-Dashboard</a></h5>
                           <p class="card-text">Project info: this app lets the user search for any city and get the current weather and a 5 day forecast fo that city, and also saves the users search history.</p>
                         </div>
                       </div>
@@ -222,7 +225,7 @@
                         <img src="./assets/imgs/Whos_Open1.JPG" class="card-img-top" alt="...">
                         <!-- rowbgc class -->
                         <div class="card-body rowbgc">
-                          <h5 class="card-title"><a href="https://malex19889.github.io/Who-s-Open/" >Whos's Open?</a></h5>
+                          <h5 class="card-title"><a class="portLink" href="https://malex19889.github.io/Who-s-Open/" >Whos's Open?</a></h5>
                           <p class="card-text">Project info: This app lets a user select a location type search and a radius then shows what locations are currently open.</p>
                         </div>
                       </div>
