--- a/portfolio.html
+++ b/portfolio.html
@@ -48,24 +48,31 @@
           <section class="row">
             <div class="col-md-4">
               <a href="../Portfolio/assets/imgs/portfolio website 1.JPG" target="_self"><img src="../Portfolio/assets/imgs/portfolio website 1.JPG" class="img-fluid" alt="Website screenshots"></a>
+              <a class="portLink" href="https://github.com/malex19889/Project-1.git"><h4>Code Refactor</h4></a>
             </div>
             <div class="col-md-4">
               <a href="../Portfolio/assets/imgs/portfolio website 2.JPG" target="_self"><img src="../Portfolio/assets/imgs/portfolio website 2.JPG" class="img-fluid" alt="Website screenshots"></a>
+              <a class="portLink" href="https://github.com/malex19889/Project-1.git"><h4>Code Refactor</h4></a>
             </div>
             <div class="col-md-4">
               <a href="https://malex19889.github.io/Password-Generator/" target="_self"><img src="./assets/imgs/Pw_gene_Demo.JPG" class="img-fluid" alt="Website screenshots"></a>
+              <a class="portLink" href="https://github.com/malex19889/Password-Generator.git"><h4>Password Generator</h4></a>
             </div>
             <div class="col-md-4">
               <a href=" https://malex19889.github.io/Js_Code_Quiz/" target="_self"><img src="./assets/imgs/Code_Quiz_Demo.JPG" class="img-fluid" alt="Website screenshots"></a>
+              <a class="portLink" href="https://github.com/malex19889/Js_Code_Quiz.git"><h4>Js Code Quiz</h4></a>
             </div>
             <div class="col-md-4">
               <a href=" https://malex19889.github.io/Weather-Dashboard/" target="_self"><img src="./assets/imgs/Weather_Dash_Demo.JPG" class="img-fluid" alt="placeholder"></a>
+              <a class="portLink" href="https://github.com/malex19889/Weather-Dashboard.git"><h4>Weather Dashboard</h4></a>
             </div>
             <div class="col-md-4">
               <a href="https://malex19889.github.io/Who-s-Open/" target="_self"><img src="./assets/imgs/Whos_Open1.JPG" class="img-fluid" alt="placeholder"></a>
+              <a class="portLink" href="https://github.com/malex19889/Who-s-Open.git"><h4>Who's Open</h4></a>
             </div>
             <div class="col-md-4">
               <a href="https://malex19889.github.io/Who-s-Open/" target="_self"><img src="./assets/imgs/Whos_Open2.JPG" class="img-fluid" alt="placeholder"></a>
+              <a class="portLink" href="https://github.com/malex19889/Who-s-Open.git"><h4>Who's Open</h4></a>
             </div>
             <!-- for future project pics -->
             <!-- <div class="col-md-4">
