--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <a class="nav-link active" href="https://github.com/malex19889" target="blank"><h5>Github</h5></a>
                           </li>
                           <li class="nav-item">
-                           <h5>Email: malex19889@yahoo.com</h5>
+                           <h5>Email: lmikew@gmail.com</h5>
                           </li>
                         </ul>
                       </div>
